--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,18 +6,18 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a routerLink="/recipes" routerLinkActive="active">Recipes</a></li>
-        <li><a routerLink="/shopping-list" routerLinkActive="active">Shopping List</a></li>
+        <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown">
+          <a style="cursor: pointer;" class="dropdown-toggle" role="button" data-toggle="dropdown">
             Manage
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a>Save Data</a></li>
-            <li><a>Fetch Data</a></li>
+            <li><a style="cursor: pointer;">Save Data</a></li>
+            <li><a style="cursor: pointer;">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
