--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,8 +23,8 @@
       </button>
       <ul class="dropdown-menu">
         <li><a (click)="addToShoppingList()" style="cursor: pointer;">To shopping list</a></li>
-        <li><a>Edit Recipe</a></li>
-        <li><a>Delete Recipe</a></li>
+        <li><a style="cursor: pointer;">Edit Recipe</a></li>
+        <li><a style="cursor: pointer;">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
