--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,7 +1,6 @@
 <a
   style="cursor: pointer;"
-  class="list-group-item clearfix"
-  (click)="onSelected()">
+  class="list-group-item clearfix">
   <div class="col-md-8">
     <h4 class="list-group0item-heading">{{recipe.name}}</h4>
     <p class="list-group-item-text">{{recipe.description}}</p>
