--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,8 +7,9 @@
 <div class="row">
   <div class="col-md-12" >
     <app-recipe-item 
-      *ngFor="let recipeItem of recipeList" 
-      [recipe]="recipeItem"></app-recipe-item>
+      *ngFor="let recipeItem of recipeList; let i = index" 
+      [recipe]="recipeItem"
+      [index]="i"></app-recipe-item>
   </div>
 </div>
 
