--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,7 @@
 <a
   style="cursor: pointer;"
   [routerLink]="[index]"
+  routerLinkActive="active"
   class="list-group-item clearfix">
   <div class="col-md-8">
     <h4 class="list-group0item-heading">{{recipe.name}}</h4>
