--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form (ngSubmit)="onAddItem(f)"
+    <form (ngSubmit)="onSubmit(f)"
     #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
@@ -31,8 +31,15 @@
             class="btn btn-success" 
             type="submit"
             [disabled]="!f.valid">{{editMode ? 'Update': 'Add'}}</button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button 
+            class="btn btn-danger" 
+            type="button" 
+            (click)="onDelete()"
+            [disabled]="!editMode">Delete</button>
+          <button 
+            class="btn btn-primary" 
+            type="button" 
+            (click)="onClear()">Clear</button>
         </div>
       </div>
     </form>
