--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -38,7 +38,7 @@
   <div class="col-md-12">
     <ul class="list-group">
       <li class="list-group-item"
-      *ngFor="let ingredient of recipe.ingredient"> 
+      *ngFor="let ingredient of recipe.ingredients"> 
         {{ ingredient.name }} - {{ingredient.amount}}
       </li>
     </ul>
