--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -6,7 +6,8 @@
                     <button 
                         type="submit" 
                         class='btn btn-success' 
-                        style="margin-right: 10px;">Save</button>
+                        style="margin-right: 10px;"
+                        [disabled]="!recipeForm.valid">Save</button>
                     <button 
                         type="button" 
                         class='btn btn-danger'>Cancel</button>
