--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -10,7 +10,8 @@
                         [disabled]="!recipeForm.valid">Save</button>
                     <button 
                         type="button" 
-                        class='btn btn-danger'>Cancel</button>
+                        class='btn btn-danger'
+                        (click)="returnBack()">Cancel</button>
                 </div>
             </div>
             <div class="row">
@@ -72,18 +73,19 @@
                                 formControlName="amount">
                         </div>
                         <div class="col-xs-2">
-                            <button class="btn btn-danger">X</button>
+                            <button 
+                                class="btn btn-danger">X</button>
                         </div>
                     </div>
                     <hr>
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <button 
-                                    type="button"
-                                    class="btn btn-success" 
-                                    (click)="onAddIngredient()">Add Ingredient</button>
-                            </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <button 
+                                type="button"
+                                class="btn btn-success" 
+                                (click)="onAddIngredient()">Add Ingredient</button>
                         </div>
+                    </div>
                 </div>
             </div>
         </form>
