--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -80,7 +80,9 @@
                         </div>
                         <div class="col-xs-2">
                             <button 
-                                class="btn btn-danger">X</button>
+                                type="button"
+                                class="btn btn-danger"
+                                (clivk)="onDeleteIngredient(i)">X</button>
                         </div>
                     </div>
                     <hr>
@@ -89,7 +91,12 @@
                             <button 
                                 type="button"
                                 class="btn btn-success" 
-                                (click)="onAddIngredient()">Add Ingredient</button>
+                                (click)="onAddIngredient()"
+                                style="margin-right: 10px;">Add Ingredient</button>
+                            <button 
+                                type="button"
+                                class="btn btn-danger" 
+                                (click)="onDeleteAllIngredients()">Delete all Ingredients</button>
                         </div>
                     </div>
                 </div>
