--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<app-header></app-header>
 <div class="container"> 
   <div class="row">
-    <div class="col-lg-12">
-      <router-outlet></router-outlet>
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <ul class="list-group">
+        
+      </ul>
     </div>
   </div>
 </div>
