--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
       <input type="text" [(ngModel)]="filteredStatus">
       <br>
       <button (click)="onAddServer()">New server</button>
+      <br><br>
+      <h2>App Status: {{ appStatus | async}}</h2>
       <hr>
       <ul class="list-group">
         <li 
