--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -24,8 +24,8 @@
                     minlength="6">
             </div>
             <div>
-                <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">{{isLogIn ? 'Login' : 'Sign Up'}}</button> | 
-                <button class="btn btn-primary" (click)="onSwitch()" type="button">{{isLogIn ? 'Switch to Sign Up' : 'Switch to Login'}}</button>
+                <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">{{isLogInMode ? 'Login' : 'Sign Up'}}</button> | 
+                <button class="btn btn-primary" (click)="onSwitch()" type="button">{{isLogInMode ? 'Switch to Sign Up' : 'Switch to Login'}}</button>
             </div>
         </form>
     </div>
